refactor : addInterceptors 사용할 엔드포인트 수정